--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <title>963007200012338 Mikroçip Microchip</title>
   <meta charset="utf-8">
 </head>
-<body>
+<body style="font-family: sans-serif;background-color: whitesmoke;color: #333;">
   <h1>963007200012338 Mikroçipli köpek</h1>
-  
   <p>963007200012338 Mikroçipli köpeğimi bulursanız lütfen aşağıdaki kanallardan iletişime geçiniz:</p>
   <p>If you have found my dog whose microchip number is 963007200012338 then please contact me via ways below:</p>
-
   <p>VetCross Veteriner <a href="tel:+902322368797">📞 +90 232 236 87 97</a></p>
-  
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12517.636833946928!2d26.8637813!3d38.3395098!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a237138474e8c2b!2sVetCross%20Veteriner!5e0!3m2!1sen!2str!4v1623413194915!5m2!1sen!2str" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  
-  <img src="963007200012338.png" alt="963007200012338">
+  <p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12517.636833946928!2d26.8637813!3d38.3395098!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a237138474e8c2b!2sVetCross%20Veteriner!5e0!3m2!1sen!2str!4v1623413194915!5m2!1sen!2str" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </p>
+  <p><img src="963007200012338.png" alt="963007200012338"></p>
 </body>
 </html>
